...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/text_receiptno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:ems="10"
                android:hint="@string/receipt_number_hint"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_monthpaid"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/text_chandaam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:ems="10"
...
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/spinner_payment_text"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/spinner_payment_text" />

            <EditText
                android:id="@+id/text_wasiyyat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:ems="10"
                android:hint="@string/wasiyyat_hint"
                android:inputType="number"
...
                app:layout_constraintEnd_toEndOf="@+id/text_chandaam"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_chandaam"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/text_waqf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:ems="10"
                android:hint="@string/waqf_jadid_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/text_receiptno"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_receiptno"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/text_tahrik"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:ems="10"
                android:hint="@string/tahrik_jadid_hint"
                android:inputType="number"
...
