<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="Schedules"/>
        <item
            android:id="@+id/nav_months"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="Months"/>
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/nav_members_list" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />
            <item
                android:id="@+id/nav_add_new_jamaat_info"
                android:icon="@android:drawable/ic_input_add"
                android:title="Add/update Jamaat Info" />
            <item
                android:id="@+id/nav_add_a_member"
                android:icon="@drawable/ic_baseline_person_add_alt_1_24"
                android:title="Add a Member" />
        </menu>
    </item>

</menu>
